@@ -39,6 +39,19 @@
 
 /****************************************************************************/
 
+/* A quick workaround for the timeval/timerequest->TimeVal/TimeRequest
+   change in the recent OS4 header files. */
+
+#if defined(__NEW_TIMEVAL_DEFINITION_USED__)
+
+#define timeval		TimeVal
+#define tv_secs		Seconds
+#define tv_micro	Microseconds
+
+#endif /* __NEW_TIMEVAL_DEFINITION_USED__ */
+
+/****************************************************************************/
+
 LONG
 TimeDelay(LONG unit,ULONG seconds,ULONG micros)
 {
